--- a/css/style.css
+++ b/css/style.css
@@ -1108,8 +1108,8 @@ form > button.form-button {
 .rank-pro {
 	padding: 10px 25px 38px 37px;
 	max-width: 350px;
-	color: #fff;
-	background-color: #6386FF;
+	color: #111111;
+	box-shadow: 0px 0px 22px -9px rgb(0 0 0 / 24%);
 	border-radius: 20px;
 }
 
@@ -1282,6 +1282,25 @@ a.footer-phone-number {
 }
 .buy-public-mobile{
 	display: none;
+}
+.advantage-us-wrapper{
+	display: flex;
+	justify-content: space-around;
+}
+.advantage-us{
+	max-width: 310px;
+}
+.rates{
+	grid-template-rows:none;
+}
+.advantages-us > h2{
+	display: none;
+}
+.advantage-us > img {
+	margin-bottom: 21px;
+}
+.advantage-us > h3 {
+	margin-bottom: 9px;
 }
 @media (min-width: 1441px) {
 	.footer-wrapper,
@@ -1770,7 +1789,7 @@ a.footer-phone-number {
 	}
 	
 	.rank-pro > .rate-title {
-		margin: 0 0 20px 11px;
+		margin-bottom:20px;
 	}
 
 	.rate-cost > p {
@@ -2044,6 +2063,97 @@ form {
 		bottom: 5px;
 		right: 60px;
 	}
+/* Аккордеон */
+.accordion {
+	padding: 0 185px;
+	margin-top: 147px;
+	text-align: center;
+	margin-bottom: 120px;
+}
+.acor-container {
+    margin: 20px 0;
+}
+.acor-container .acor-body {
+    width: calc(100% - 40px);
+    margin: 0 auto;
+    height: 0;
+    color: #111111;
+    background-color: #fff;
+    line-height: 18px;
+    padding: 0 30px;
+    box-sizing: border-box;
+    transition: color 0.5s, padding 0.5s;
+    overflow: hidden;
+    font-family: Verdana, sans-serif; 
+    font-size: 16px;
+	box-shadow: 0px 0px 22px -11px rgba(0, 0, 0, 0.5);
+}
+.acor-container .acor-body p {
+    margin: 0 0 10px;
+}
+.acor-container label {
+    cursor: pointer;
+    display: block;
+    padding: 25px 30px;
+    width: 100%;
+    color: #111111;
+    font-weight: 300;
+    box-sizing: border-box;
+    z-index: 100;
+    font-family: Verdana, sans-serif;   
+    font-size: 18px;
+    margin: 0 0 10px;
+    transition: color .35s;
+	box-shadow: 0px 0px 22px -11px rgba(0, 0, 0, 0.2);
+	border-radius: 50px;
+}
+.acor-container label:hover {
+    color: #111111;
+}
+.acor-container input{
+    display: none;
+}
+.acor-container label:before {
+    content: '\276F';
+    float: right;
+}
+.acor-container input:checked + label {
+    background-color: #6386FF;
+    color: #fff;
+}
+.acor-container input:checked + label:before {
+    transition: transform .35s;
+    transform: rotate(90deg);
+}
+.acor-container input:checked + label + .acor-body {
+    height: auto;
+    margin-top: -5px;
+    color: #000;
+    padding: 20px 30px 10px;
+}
+.form-rates > h2 {
+	display: none;
+}
+.accordion-button{
+	width: 410px;
+}
+a.footer-phone-number{
+	text-decoration: none;
+}
+a.phone-number{
+	text-decoration: none;
+}
+@media (min-width: 1421px) {
+	.form-rates {
+	display: flex;
+    align-items: center;
+	}
+	.rate-text{
+		order: -1;
+	}
+
+}
+
 @media (max-width: 1420px) {
 	.indicator{
 		left: 5%;
@@ -2097,6 +2207,73 @@ form {
 	}
 	.flex_column{
 		margin: 45px 55px;
+	}
+	.advantages-us > h2{
+		display: block;
+	}
+	.form-rates{
+		display: flex;
+		flex-direction: column;
+	}
+	.rate-text{
+		order: 1;
+	}
+	.form-rates > h2{
+		display: block;
+		margin-bottom: 30px;
+	}
+	.rate-text > h2 {
+		display: none;
+	}
+	.click-cost > picture {
+		right: -200px;
+	}
+	.advantages-us{
+		margin-top: 100px;
+
+	}
+	.advantage-us-wrapper{
+		flex-direction: column;
+
+	}
+	.advantage-us{
+		display: flex;
+		margin-left: 159px;
+		max-width: 350px;
+	}
+	.advantages-us > h2{
+		margin-left: 140px;
+		margin-bottom: 40px;
+	}
+	.advantage-us > img{
+		margin-right: 20px;
+		width: 52px;
+	}
+	.advantage-us-text > h3 {
+		width: 400px;
+		font-size: 22px;
+	}
+	.advantage-us-text > p {
+		width: 400px;
+		font-size: 18px;
+	}
+	.accordion{
+		padding: 0 30px;
+	}
+	.accordion-button {
+		width: 100%;
+		max-width: none;
+	}
+	.accordion > h2{
+		text-align: start;
+		margin-bottom: 43px;
+	}
+	.using-radars > picture {
+		display: none;
+	}
+	.how-it-works > picture {
+		order: -1;
+		width: 708px;
 	}
 }
 
@@ -2304,7 +2481,7 @@ form {
 
 	.form-another > p {
 		margin: 0;
-		padding: 4px;
+		margin-right: 20px;
 	}
 
 	.partners {
@@ -2334,7 +2511,7 @@ form {
 	}
 
 	.duration {
-		padding: 8px 14px;
+		padding: 10px 14px;
 	}
 
 	.rent-for-business {
@@ -2495,6 +2672,7 @@ form {
 	}
 	.click-cost > picture{
 		top:0;
+		left: 0;
 	}
 	.trades-with-radars-heading{
 		display: none;
@@ -2800,8 +2978,162 @@ form {
 		margin-top: 70px;
 		margin-bottom: 20px;
 	}
+	/* Удалить */
+
+	.slider{
+		flex-wrap: wrap;
+	}
+
+	/*  */
+	.slide{
+		width: 210px;
+	}
+	.slide-img{
+		max-width: 130px;
+	}
+	.more-detail,
+	.slide > ul{
+		font-size: 12px;
+		line-height: 15px;
+	}
+	.rates > form {
+		display: flex;
+		flex-direction: column;
+	}
+	.rate-rank{
+		flex-direction: column;
+	}
+	.rank-pro{
+		order: -1;
+	}
+	.form-rates > h2{
+		max-width: 320px;
+		margin-top: 70px;
+		margin-bottom: 30px;
+		display: block;
+	}
+	.rate-text > h2 {
+		display: none;
+	}
+	.rate-duration{
+		border: 1px solid #6386FF;
+		border-radius: 68.8055px;
+
+	}
+	.duration{
+		border: none;
+		font-size: 12px;
+		margin-bottom: 0;
+	}
+	input.day:checked ~ label.day > p.duration,
+	input.month:checked ~ label.month > p.duration,
+	input.sixMonths:checked ~ label.sixMonths > p.duration,
+	input.year:checked ~ label.year > p.duration{
+		width: 90px;
+	}
+	.rate-cost > p {
+		display: flex;
+		flex-direction: column;
+		font-size: 16px;
+		margin: 20px 0;
+		
+	}
+	.blue-span{
+		text-align: end;
+	}
+	.rate-text{
+		margin-top: 0;
+	}
+	.rate-text > p{
+		font-size: 14px;
+		margin: 0;
+		margin-bottom: 10px;
+		max-width: 320px;
+	}
+	.button-cost{
+		font-size: 12px;
+		padding: 17.5px 120px;
+	}
+	.pro{
+		order: -1;
+	}
 	
+	.advantages-us > h2{
+		margin-left: 20px;
+	}
+	.advantage-us{
+		margin-left: 20px;
+		display: block;
+	}
+	.advantage-us-text > h3{
+		font-size: 18px;
+		width: 320px;
+	}
+	.advantage-us-text > p{
+		font-size: 14px;
+		width: 320px;
+	}
+	.accordion{
+		margin-top: 70px;
+		margin-bottom: 70px;
+		padding: 0 20px;
+	}
+	.acor-container label{
+		font-size: 16px;
+		box-shadow: none;
+		border-radius: 0;
+		text-align: start;
+		border-bottom: 1px solid #6386FF ;
+		padding: 15px;
+		margin: 0;
+	}
+	.acor-container .acor-body{
+		width: 100%;
+		margin: 0;
+	}
+	.accordion-button{
+		font-size: 12px;
+		padding: 17.5px 0px;
+	}
+	.rent-for-business{
+		padding: 20px;
+		margin-bottom: 20px;
+	}
+	.last-button {
+		font-size: 12px;
+		width: 100%;
+		padding: 17.5px 0px;
+		margin-bottom: 20px;
+	}
+	.input-keybord {
+		width: 100%;
+	}
+	.phone-callback{
+		background-color: #fff;
+		font-size: 12.63px;
+		color: #6386FF;
+		padding: 0;
+	}
+	a.footer-phone-number {
+		font-size: 16px;
+		margin: 0;
+	}
+
 }
+
+input.base:checked ~ label.base > div.rank-base,
+input.pro:checked ~ label.pro > div.rank-pro{
+	background-color: #6386FF;
+	color: #fff;
+}
+input.day:checked ~ label.day > p.duration,
+	input.month:checked ~ label.month > p.duration,
+	input.sixMonths:checked ~ label.sixMonths > p.duration,
+	input.year:checked ~ label.year > p.duration{
+		background-color: #6386FF;
+		color: #fff;
+	}
+
 .free-consultation:hover,
 .phone > a.phone-callback:hover,
 .blue-button:hover,
