--- a/css/style.css
+++ b/css/style.css
@@ -592,13 +592,32 @@ h2 > span {
 }
 
 .how-it-works-cont {
-    margin: 59px 30px 60px 20px;
+    margin: 59px 30px 60px 0px;
+	min-width: 0;
 }
 
 .how-it-works-cont > h2 {
 	margin: 0 0 30px 0;
 }
-
+.swiper{
+	height: 350px;
+	display: flex;
+}
+.navigation-slider-how-it-works{
+	display: flex;
+	flex-direction: column;
+	margin-right: 80px;
+}
+.pagination-how-it-works{
+	position: relative;
+	top: 40% !important;
+	left: 0px; 
+}
+.slider-button-next{
+	position: relative;
+	top: 30%;
+	left: 0px; 
+}
 .how-it-works-title {
     margin-bottom: 9px;
 	font-weight: 600;
@@ -945,6 +964,11 @@ form > button.form-button {
 	-webkit-box-shadow: 0px 0px 22px -9px rgba(0, 0, 0, 0.24);
 	        box-shadow: 0px 0px 22px -9px rgba(0, 0, 0, 0.24);
 	border-radius: 20px;
+	height: 585px;
+}
+.swiper-how-can-be{
+	height: 590px;
+	margin-top: 40px;
 }
 
 .slide-img {
@@ -1583,7 +1607,10 @@ a.footer-phone-number {
 	}
 
 	.how-it-works-cont {
-		margin: 35px 119px 60px 10px;
+		margin: 35px 119px 60px 0px;
+	}
+	.navigation-slider-how-it-works{
+		margin-right: 80px;
 	}
 
 	.buy-public {
@@ -2067,7 +2094,7 @@ form {
 .accordion {
 	padding: 0 185px;
 	margin-top: 147px;
-	text-align: center;
+	text-align: left;
 	margin-bottom: 120px;
 }
 .acor-container {
@@ -2495,9 +2522,19 @@ a.phone-number{
 
 	.how-it-works-cont {
 		max-width: 274px;
-		padding: 14px;
+		padding: 14px 14px 14px 0px;
 		margin: 0;
 	}
+	.pagination-how-it-works{
+top: 40% !important;
+	}
+	.slider-button-next{
+		top: 15%;
+	}
+	.navigation-slider-how-it-works{
+		margin-right: 30px;
+	}
+
 
 	.how-it-works-title {
 		font-size: 18px;
@@ -2913,9 +2950,9 @@ a.phone-number{
 		padding: 8px 33px;
 	}
 	.progress-container{
-		left: 100px;
-		bottom: 330px;
-		width: 230px;
+		left: 80px;
+		bottom: 340px;
+		width: 200px;
 		height: 6px;
 	}
 	.progress-bar{
@@ -2923,10 +2960,11 @@ a.phone-number{
 	}
 	.indicator{
 		left: 30px;
-		bottom: 300px;
+		bottom: 311px;
 	}
 	.miss{
-		bottom: 340px;
+		bottom: 345px;
+		right: 50px;
 	}
 	.questions-quiz{
 		min-height: 450px;
@@ -3124,6 +3162,8 @@ a.phone-number{
 		font-size: 12px;
 		line-height: 15px;
 		width: 120px;
+		margin: 0;
+		padding: 0;
 	}
 	.partners{
 		margin-top: 117px;
@@ -3144,6 +3184,7 @@ a.phone-number{
 	/*  */
 	.slide{
 		width: 210px;
+		height: 380px;
 	}
 	.slide-img{
 		max-width: 130px;
@@ -3152,6 +3193,9 @@ a.phone-number{
 	.slide > ul{
 		font-size: 12px;
 		line-height: 15px;
+	}
+	.swiper-how-can-be{
+		height: 390px !important;
 	}
 	.rates > form {
 		display: flex;
@@ -3285,6 +3329,9 @@ a.phone-number{
 
 	.phone-callback {
 		padding: 15px 9.5px;
+	}
+	.swiper{
+		height: 150px;
 	}
 }
 
